@@ -95,6 +95,8 @@ In alphabetical order (by last name)
 ** Patch [#9852] Patch for RSpec's Website using Webgen 0.4.2
 ** Patch [#9925] Changed ".rhtml" to "template" in REST spec generator
 ** Patch [#9926] Rakefile - RSPEC_DEPS constant as an Array of Hashes instead of an Array of Arrays
+* Steve Tendon
+** Patch [#9458] The rspec_resource generator does not take into account class nesting
 * Jonathan Tron
 ** Patch for Spec::Rails resource_generator
 ** Patch for RSpec.tmbundle to make it work with RSpec installed as a plugin
