@@ -1,4 +1,4 @@
-require File.dirname(__FILE__) + '/../spec_helper'
+require File.dirname(__FILE__) + '<%= '/..' * class_nesting_depth %>/../spec_helper'
 
 describe <%= controller_class_name %>Controller, "#route_for" do
 
