@@ -1,4 +1,4 @@
-require File.dirname(__FILE__) + '/../../spec_helper'
+require File.dirname(__FILE__) + '<%= '/..' * class_nesting_depth %>/../../spec_helper'
 
 describe "/<%= table_name %>/edit.<%= default_file_extension %>" do
   include <%= controller_class_name %>Helper
