@@ -31,6 +31,7 @@ put this in a file that is loaded before your specs:
   end
 
 * Sugar FREE!
+* Applied [#9458] The rspec_resource generator does not take into account class nesting (Patch from Steve Tendon)
 * Applied [#9132] Rakefile spec:doc can fail without preparing database (Patch from Steve Ross)
 * Applied [#9678] Custom runner command line switch, and multi-threaded runner (Patch from Bob Cotton)
 * Applied [#9926] Rakefile - RSPEC_DEPS constant as an Array of Hashes instead of an Array of Arrays (Patch from Scott Taylor)
